blocks/profile.css
.profile {
  padding: 34px 0 20px;
  display: flex;
  gap: 20px;
  align-items: center;
  border-bottom: 1px solid #21212166;
}

.profile__avatar {
  width: 190px;
  height: 190px;
  border-radius: 8px;
  object-fit: cover;
  flex-shrink: 0;
}

.profile__info {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  max-width: 505px;
}

.profile__name {
  font-size: 32px;
  font-weight: 500;
  line-height: 1;
  margin: 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
}

.profile__description {
  font-size: 16px;
  font-weight: 500;
  line-height: 1;
  margin: 12px 0 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
  opacity: 0.7;
}

.profile__edit-button {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  font-family: Poppins, Arial, sans-serif;
  font-size: 16px;
  font-weight: 500;
  line-height: 1;
  color: #212121;
  opacity: 0.7;
  display: flex;
  align-items: center;
  gap: 8px;
  margin-top: 114px;
}
.profile__edit-button::before {
  content: "";
  display: inline-block;
  width: 18px;
  height: 18px;
  background: url("../images/pencil.svg") center no-repeat;
  background-size: contain;
}
.profile__add-button {
  min-width: 149px;
  height: 52px;
  background-color: #212121;
  color: #fcf5e5;
  border: none;
  border-radius: 8px;
  font-family: Poppins, Arial, sans-serif;
  font-size: 16px;
  font-weight: 500;
  padding: 0 32px;
  cursor: pointer;
  margin-top: auto;
  margin-left: auto;
  flex-shrink: 0;
}
.profile__edit-button:hover {
  opacity: 1;
}
.profile__add-button:hover {
  opacity: 0.8;
}
/* Mobile View */
@media screen and (max-width: 630px) {
  .profile {
    flex-direction: column;
    align-items: center;
    padding: 20px 0;
  }

  .profile__avatar {
    width: 80px;
    height: 80px;
  }

  .profile__info {
    max-width: 100%;
    align-items: center;
  }

  .profile__name {
    font-size: 20px;
  }

  .profile__description {
    text-align: center;
  }

  .profile__edit-button {
    margin-top: 20px;
    align-self: center;
  }

  .profile__add-button {
    width: 288px;
    max-width: 100%;
    margin-left: 0;
    margin-top: 20px;
  }
}

